# fstg_toolkit

./: .gitlab-ci.yml  .readthedocs.yaml  README.md  environment.yml  plan_fix_frequent_tooltip.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: changelog.md  cli.rst  conf.py  index.rst  installation.md  usage.md
docs/api/: factory.rst  frequent.rst  graph.rst  index.rst  io.rst  metrics.rst  simulation.rst  visualization.rst
docs/api/app/: core.rst  figures.rst  index.rst  pages.rst  views.rst
docs/concepts/: data_model.md  index.md  rc5_algebra.md  spatio_temporal_graphs.md
docs/tutorials/: building_graphs.md  computing_metrics.md  frequent_patterns.md  index.md  running_dashboard.md  simulation.md
src/app/: data.py  fstview.py  stplot.py
src/app/assets/: custom.css
src/app/core/: utils.py
src/app/figures/: matrices.py
src/app/views/: common.py  data.py  matrices.py  model.py  population.py  subject.py
src/fmri-st-graph/: graph.py
src/fmri_st_graph/: __init__.py  __main__.py  factory.py  graph.py  io.py  measures.py  metrics.py  simulation.py  visualization.py
src/fmri_st_graph/app/: fstview.py
src/fmri_st_graph/app/assets/: common.js
src/fmri_st_graph/app/core/: color.py  datafilesdb.py  geometry.py  io.py
src/fmri_st_graph/app/figures/: metrics.py  subject.py
src/fmri_st_graph/app/views/: common.py  data.py  matrices.py  metrics.py  population.py  subject.py
src/fstg_toolkit/: __init__.py  __main__.py  factory.py  frequent.py  graph.py  io.py  io_new.py  logging.yml  metrics.py  simulation.py  utils.py  visualization.py
src/fstg_toolkit/app/: __init__.py  fstg_view.py  fstview.py
src/fstg_toolkit/app/assets/: common.js  custom.css
src/fstg_toolkit/app/core/: color.py  config.py  datafilesdb.py  geometry.py  io.py  processing.py  utils.py
src/fstg_toolkit/app/figures/: common.py  data.py  frequent.py  matrices.py  (+2 more)
src/fstg_toolkit/frequent/: __init__.py  _docker_utils.py  patterns.py  spminer.py
src/spminer/: .env  Dockerfile  batch_process.py  docker-compose.yml  requirements.txt
src/spminer/common/: combined_syn.py  data.py  feature_preprocess.py  models.py  utils.py
src/spminer/subgraph_matching/: alignment.py  config.py  test.py  train.py
src/spminer/subgraph_mining/: config.py  decoder.py  search_agents.py
test/: doctests_runner.py  profile_build.py  profile_plot.py  test_factory.py  test_frequent.py  test_graph.py  test_integration_regression.py  test_io.py  test_metrics.py  test_simulation.py  tests_runner.py
test/data/: toy-example_matrices.npz
tests/: doctests_runner.py  profile_build.py  profile_plot.py  test_common.py  test_factory.py  test_measures.py  test_metrics.py  test_simulation.py  tests_runner.py
(+10 files in other folders)
