[project]
name = "fmri-st-graph"
version = "0.1.0"
description = "fMRI data visualized as spatio-temporal graphs."
authors = [
    {name = "Julien PONTABRY",email = "jpontabry@unistra.fr"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "dash[diskcache] (>=3.0.2,<4.0.0)",
    "dash-extensions (>=2.0.0,<3.0.0)",
    "dash-bootstrap-components (>=2.0.0,<3.0.0)",
    "dash-daq (>=0.6.0,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
